@@ -1,6 +1,8 @@
 Revision history for Perl extension Metabrik.
 
 1.09
+   - FEATURE: core::shell/core::context: supports passing Perl code directly as Commands
+              Arguments. Example: run database::sqlite create MyTable "[ qw(field1 field2) ]"
    - RENAME: core::shell: help_show_brik_attributes => help_show_base_attributes
    - RENAME: core::shell: help_show_brik_commands => help_show_base_commands
    - RENAME: core::shell: comp_show_brik_attributes => comp_show_base_attributes
